[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Environmental Objects/PuzzleArrow.png" type="Texture" id=1]
[ext_resource path="res://Script/EnvironmentalObjectScript/ReflectorScript.gd" type="Script" id=2]
[ext_resource path="res://Scene/GUI/ShootPosition.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 7 )

[node name="Reflector" type="Position2D"]
script = ExtResource( 2 )

[node name="Reflector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reflector"]
shape = SubResource( 1 )

[node name="PuzzleArrow" type="Sprite" parent="."]
position = Vector2( -2, 0 )
rotation = 2.35619
texture = ExtResource( 1 )

[node name="ShootPosition" parent="." instance=ExtResource( 3 )]
position = Vector2( 7, 0 )

[node name="PlayerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Reflector" to="." method="_on_Reflector_area_entered"]
[connection signal="body_entered" from="PlayerArea2D" to="." method="_on_PlayerArea2D_body_entered"]
[connection signal="body_exited" from="PlayerArea2D" to="." method="_on_PlayerArea2D_body_exited"]
